# kubernetes-clothing-classifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: app.py
